@@ -1,5 +1,9 @@
 2004-10-22 Bart Hakvoort  <gparted@users.sf.net>
 
+	* src/Dialog_Partition_Info.cc: codecleanups.. Hey! i was bored :P
+
+2004-10-22 Bart Hakvoort  <gparted@users.sf.net>
+
 	* src/Device.cc: removed libparted messagesdialog. instead, show them on the console. They proved to be pretty useless.
 	* src/Win_GParted.cc: fixed crasher when loading gparted (or refresh devices) while there's a (audio) cd in the cdrom-drive.
 
